[package]
authors = ["Julian Ospald <hasufell@posteo.de>"]
name = "pnmixer-rs"
version = "0.1.2"

[[bin]]
doc = false
name = "pnmixer-rs"
path = "src/bin.rs"

[dependencies]
alsa = "^0.1.10"
alsa-sys = "^0.1.1"
error-chain = "^0.10.0"
ffi = "^0.0.2"
flexi_logger = "^0.6.8"
gdk-pixbuf = "^0.2.0"
gdk-pixbuf-sys = "^0.4.0"
gdk-sys = "^0.4.0"
gio = "^0.2.0"
glib = "^0.3.1"
glib-sys = "^0.4.0"
gobject-sys = "^0.4.0"
gtk-sys = "^0.4.0"
lazy_static = "^0.2.8"
libc = "^0.2.30"
libnotify = { version = "^1.0.2", optional = true }
log = "^0.3.8"
png = "^0.9.0"
serde = "^1.0.11"
serde_derive = "^1.0.11"
toml = "^0.4.5"
w_result = "^0.1.2"
which = "^1.0.2"
xdg = "^2.1.0"

[dependencies.gdk]
features = [
    "v3_10",
    "v3_12",
    "v3_22",
]
version = "^0.6.0"

[dependencies.gtk]
features = [
    "v3_10",
    "v3_12",
    "v3_22",
]
version = "^0.2.0"

[dependencies.x11]
features = [
    "xlib",
    "xtst",
]
version = "^2.15.0"

[features]
notify = ["libnotify"]

[lib]
doc = true
name = "pnmixerlib"
path = "src/lib.rs"
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = false
lto = false
opt-level = 0
panic = "unwind"
rpath = false
